--- a/brief2_3/index.html
+++ b/brief2_3/index.html
@@ -19,8 +19,8 @@
     </header>
     <nav>
         <ul>
-            <li><a href="#">Home</a></li>/
-            <li><a href="#">Used DVDs</a></li>/
+            <li><a href="#">Home</a>/</li>
+            <li><a href="#">Used DVDs</a>/</li>
             <li><a href="#">Less than £10</a></li>
           </ul>
     </nav>
