--- a/brief2_3/index.html
+++ b/brief2_3/index.html
@@ -73,5 +73,8 @@
         </div>
     </footer>
     
+    <div class="footer">
+        <a href="mailto:tarek.ouachani01@gmail.com">Tarek OUACHANI</a>. All rights reserved. © 2022 
+    </div>
 </body>
 </html>
