--- a/brief2_3/index.html
+++ b/brief2_3/index.html
@@ -28,7 +28,7 @@
         <h1>Videos less than £10</h1>
         <p>Lorem ipsum dolor sit amet. In quod dolor est nisi corporis ut enim ullam <br> nesciunt voluptate  internos impedit. Dolorem libero At quam aliquam </p>
     </section>
-    <footer>
+    <article>
         <div class="card">
             <div class=".img"><img src="prd.PNG" alt="Product image 1"></div>
             <h3>Video title 1</h3>
@@ -71,10 +71,10 @@
             <div class="prix">Price you pay £9.99</div>
             <div class="saving">Your saving £9</div>
         </div>
-    </footer>
+    </article>
     
-    <div class="footer">
+    <footer>
         <a href="mailto:tarek.ouachani01@gmail.com">Tarek OUACHANI</a>. All rights reserved. © 2022 
-    </div>
+    </footer>
 </body>
 </html>
