--- a/brief2_3/index.html
+++ b/brief2_3/index.html
@@ -30,7 +30,7 @@
     </section>
     <article>
         <div class="card">
-            <div class=".img"><img src="prd.PNG" alt="Product image 1"></div>
+            <img src="prd.PNG" alt="Product image 1">
             <h3>Video title 1</h3>
             <div class="rrp">RRP : £18.99</div>
             <div class="prix">Price you pay £9.99</div>
